--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ html {
 body{
   background-image: linear-gradient(
       115deg,
-      rgba(255, 0, 0, 0.4),
+      rgba(150, 0, 0, 0.4),
       rgba(150, 0, 0, 0.6)
     ),
  url(https://image.freepik.com/foto-gratis/concepto-negocio-copia-espacio-mesa-escritorio-oficina-enfoque-pluma-analisis-grafico-computadora-bloc-notas-taza-cafe-tablero-desk-vintage-retro-filtro-enfoque-selectivo_1418-536.jpg);
@@ -21,76 +21,152 @@ body{
   font-family: 'Roboto Condensed', sans-serif;
   height: 100vh;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+#titulo{
+  display: block;
+  box-shadow: 0 0 10px 2px black;
+  max-width: 40%;
+  max-height: 40%;
+  padding: 1rem;
+  /* display: none; */
+  cursor: pointer;
+}
+.arriba{
+  animation: arriba infinite 2s;
+}
+@keyframes arriba{
+  0%{
+    margin-bottom: 0rem;
+  }
+  100%{
+    margin-bottom: 60rem;
+
+  }
+}
+@media (min-width: 1200px){
+  #titulo:hover{
+    box-shadow: 0 0 15px 5px black;
+  }
 }
 #title{
-  max-width: 80%;
-  max-height: auto;
-  margin: auto;
+  font-size: 40px;
+  margin-bottom: 0.5rem;
   text-align:center;
   text-transform:uppercase;
 }
+#description{
+  font-size: 25px;
+}
 #survey-form{
-  padding:25px 15px;
-  max-width: 50%;
-  max-height: auto;
-  margin: 5px auto;
+  padding: 25px 15px;
+  width: 60%;
+  height: 90vh;
   text-align:justify;
-  background-color: rgba(150, 0, 0, 0.6);
+  background-color: rgba(150, 0, 0, 0.4);
   box-shadow:1px 1px 5px black;
-  border-radius:1%;
+  /* border-radius:1%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  display: none;
 }
-.boxFlex{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.sube{
+  animation: sube 1 1.5s;
 }
-.boxFlex input{
-    width: auto;
-}
-@media (max-width:678px){
-  #survey-form{
-      max-width: 70%;
+@keyframes sube{
+  0%{
+    margin-top: 95rem;
   }
 }
-h1{
-  font-size:40px;
+.formFlex{
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+  height: 90%;
+  width: 90%;
 }
-p{
-  font-size:25px;
-  margin:0 auto 25px ;
-}
-form, form p, label, input, select{
-  font-size:18px;
-  margin:0;
-}
-form p{
-  margin-bottom: 2.5px;
-}
-label{
-  display:flex;
+
+.boxFlex{
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
   align-items: center;
-  margin-bottom: 2.5px;
 }
-div{
-  margin:auto 0 1rem 0;
+.boxFlex p{
+  background-color: white;
+  border-radius:0.25rem;
+  padding: 5px;
+  width: 30%;
+  text-align: center;
+}
+.boxFlex p:focus{
+  background-color: red;
+}
+@media (max-width:768px){
+  #survey-form *{
+    font-size: 18px!important;
+  }
+  .boxLabel{
+    flex-wrap: wrap;
+  }
+}
+
+@media (max-width:1200px){
+  #survey-form{
+      max-width: 500px;
+  }
+  #survey-form *{
+    font-size: 22px;
+  }
+  .boxFlex{
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .boxFlex p{
+    width: 100%;
+  }
+  .boxLabel{
+    justify-content: space-around!important;
+    width: 100%!important;
+    margin-top: 10px;
+  }
+}
+form *{
+  font-size:25px;
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+.boxLabel{
+  display: flex;
+  justify-content: left;
+  width: 70%;
+}
+.boxLabel label{
+  display: flex;
+  align-items: center;
+}
+.input-text{
+  width: 100%;
 }
 div>input, div>select, button{
   width:100%;
 }
 .input{
   display:inline-block;
-  margin-right: 5px;
-  min-height: 18px;
+  margin: auto 10px;
+  min-height: 25px;
 }
 textarea{
   width:100%;
   height:150px;
 }
 
-::placeholder, select, button{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size:18px;
-}
+
 input, select, textarea, button{
   padding:5px;
   border:none;
@@ -100,9 +176,12 @@ input, select, textarea, button{
 button{
    text-transform:uppercase;
   font-weight:bold;
+  border: solid 1px white;
+
 }
 button:hover{
-  background-color:black;
-  color:rgba(150, 0, 0, 1);
+  background-color:      rgba(150, 0, 0, 1);
+  color: white;
   cursor:pointer;
+  border: solid 1px white;
 }
